# tubes_dagoz

./: .gitignore  README.md  package.xml  readme.md
control/include/control/: control_node.hpp
control/src/: control_node.cpp
install/: local_setup.sh  setup.ps1  setup.sh
install/Msgs/share/Msgs/: package.bash  package.zsh
install/can_msgs/include/can_msgs/can_msgs/msg/detail/: frame__builder.hpp  frame__description.c  frame__rosidl_typesupport_fastrtps_cpp.hpp  frame__struct.hpp  frame__traits.hpp  frame__type_support.c  frame__type_support.h
install/can_msgs/share/ament_index/resource_index/parent_prefix_path/: can_msgs
install/can_msgs/share/can_msgs/: local_setup.sh  package.sh
install/can_msgs/share/can_msgs/cmake/: can_msgsConfig.cmake  can_msgs__rosidl_typesupport_cppExport.cmake  can_msgs__rosidl_typesupport_introspection_cExport.cmake  can_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_can_msgs__rosidl_generator_cExport.cmake  export_can_msgs__rosidl_generator_pyExport-noconfig.cmake  export_can_msgs__rosidl_generator_pyExport.cmake
install/can_msgs/share/can_msgs/msg/: Frame.json  Frame.msg
install/control/lib/control/: keyboard_input
install/control/share/ament_index/resource_index/parent_prefix_path/: control
install/control/share/control/: local_setup.sh  package.sh  package.xml
install/control/share/control/msg/: HardwareCommand.msg
install/expander_controller/lib/expander_controller/: goalkeeper_arm_publisher
install/expander_controller/share/ament_index/resource_index/parent_prefix_path/: expander_controller
install/expander_controller/share/expander_controller/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/expander_controller/share/expander_controller/cmake/: expander_controllerConfig.cmake
install/msgs/include/msgs/msgs/msg/: hardware_command.hpp
install/msgs/include/msgs/msgs/msg/detail/: hardware_command__description.c  hardware_command__functions.c  hardware_command__functions.h  hardware_command__rosidl_typesupport_fastrtps_c.h  hardware_command__rosidl_typesupport_introspection_c.h  hardware_command__struct.hpp  hardware_command__traits.hpp  hardware_command__type_support.cpp  hardware_command__type_support.hpp
install/msgs/share/msgs/: local_setup.sh  package.sh  package.xml
install/msgs/share/msgs/cmake/: export_msgs__rosidl_generator_cExport.cmake  export_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  msgs__rosidl_typesupport_cExport-noconfig.cmake  msgs__rosidl_typesupport_cExport.cmake  msgs__rosidl_typesupport_cppExport-noconfig.cmake  msgs__rosidl_typesupport_introspection_cExport.cmake  msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/msgs/share/msgs/msg/: HardwareCommand.json
install/ros2_socketcan/lib/ros2_socketcan/: socket_can_receiver_node_exe  socket_can_sender_node_exe
install/ros2_socketcan/share/ament_index/resource_index/parent_prefix_path/: ros2_socketcan
install/ros2_socketcan/share/ros2_socketcan/: local_setup.sh  package.sh
install/ros2_socketcan/share/ros2_socketcan/launch/: socket_can_bridge.launch.xml
install/ros2_socketcan_msgs/include/ros2_socketcan_msgs/ros2_socketcan_msgs/msg/detail/: fd_frame__builder.hpp  fd_frame__description.c  fd_frame__functions.c  fd_frame__rosidl_typesupport_fastrtps_c.h  fd_frame__struct.h  fd_frame__type_support.cpp
install/ros2_socketcan_msgs/share/ros2_socketcan_msgs/: local_setup.sh  package.sh
install/ros2_socketcan_msgs/share/ros2_socketcan_msgs/cmake/: export_ros2_socketcan_msgs__rosidl_generator_cExport-noconfig.cmake  export_ros2_socketcan_msgs__rosidl_generator_pyExport-noconfig.cmake  export_ros2_socketcan_msgs__rosidl_generator_pyExport.cmake  export_ros2_socketcan_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_ros2_socketcan_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_ros2_socketcan_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  ros2_socketcan_msgs__rosidl_typesupport_cExport-noconfig.cmake  ros2_socketcan_msgs__rosidl_typesupport_cppExport-noconfig.cmake  ros2_socketcan_msgs__rosidl_typesupport_cppExport.cmake  ros2_socketcan_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  ros2_socketcan_msgs__rosidl_typesupport_introspection_cExport.cmake  ros2_socketcan_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/ros2_socketcan_msgs/share/ros2_socketcan_msgs/msg/: FdFrame.idl  FdFrame.json
log/: latest_build  latest_test
package/: CMakeLists.txt
package/control/src/: control_node.cpp
package/launch/: robot_control.launch
src/control/: CMakeLists.txt  package.xml
src/control/launch/: control.launch.py
src/control/src/: keyboard_input.cpp  translator_expanding.cpp  translator_locomotion.cpp  translator_node.cpp
src/expander_controller/: CMakeLists.txt
src/expander_controller/src/: goalkeeper_arm_publisher.cpp  goalkeeper_arm_subscriber.cpp
src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/install/control/share/control/: package.sh
src/log/: latest_build
src/msgs/: CMakeLists.txt
