<?xml version="1.0"?>
<package format="2">
  <name>tubes_dagoz</name>
  <version>0.0.1</version>
  <description>Robot control system for Maxwell</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tubes_dagoz_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tubes_dagoz_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
